--- a/Example-Swift/Base.lproj/Main.storyboard
+++ b/Example-Swift/Base.lproj/Main.storyboard
@@ -30,8 +30,8 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iSN-WJ-es5">
-                                <rect key="frame" x="163.5" y="548" width="47" height="30"/>
-                                <state key="normal" title="Reload"/>
+                                <rect key="frame" x="170" y="548" width="34" height="30"/>
+                                <state key="normal" title="Load"/>
                                 <connections>
                                     <action selector="reloadImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qj9-AX-IC8"/>
                                 </connections>
@@ -74,7 +74,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="r5c-ZU-Wfa" id="9au-OL-rfv">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ek-tk-X9N">
